# CudaSift

./: CMakeLists.txt  LICENSE  README  README.md  cudaImage.cu  cudaSift.h  cudaSiftD.cu  cudaSiftD.h  cudaSiftD4.cu  cudaSiftD_old.cu  cudaSiftH.cu  cudaSiftH.h  cudaSiftH4.cu  cudaSiftH_old.cu  cudaSiftH_old.h  cudautils.h  geomFuncs.cpp  mainSift.cpp  match.cu  matching.cu  singular.cu
common/: Utility.cpp  Utility.h
oldcode/: cudaImage.cu  cudaImage.h  cudaSift.h  cudaSiftD.cu  cudaSiftD.h  cudaSiftH.cu  cudaSiftH.h  cudaSift_gold.cpp  cudautils.h  mainSift.cpp  singular.cu
src/: CMakeLists.txt  cudaImage.dp.cpp  cudaImage.h  cudaSift.h  cudaSiftD.dp.cpp  cudaSiftD.h  cudaSiftH.dp.cpp  cudaSiftH.h  cudautils.h  geomFuncs.cpp  mainSift.cpp  matching.dp.cpp
src/infra/: atomic.hpp  device.hpp  infra.hpp  memory.hpp
